fix(sonar): harden sync persistence paths